# RepoToTextRS

./: .gitignore  Cargo.toml  LICENSE  Settings.toml  config.toml  readme.md
.cargo/: config
.devcontainer/: devcontainer.json
.github/workflows/: build.yml
src/: main.rs
