[package]
    edition="2021"
    name="repototext"
    version="0.1.0"

    # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
    clap="4.5.3"
    config="0.14.0"
    figment={version="0.10", features=["env", "toml"]}
    glob-match="0.2.1"
    rust_tree="0.1.4"
    serde="1.0.197"
    walkdir="2.5.0"

[profile.dev]
    opt-level=0

[profile.release]
    opt-level=3
